fix activite marseille Version Mobile Chrome

--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ nav a {
 
 .activite-marseille {
     display: flex;
-    gap: 20px;
+    gap: 30px;
 }
 
 .card-content-am {
